force-app/main/default/objects/Competition__c/Competition__c.object-meta.xml
<CustomObject>
    <label>Competition</label>
    <nameField>
        <label>Competition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>    
</CustomObject>