force-app/main/default/objects/Competition__c/fields/CompetitionType__c.field-meta.xml
<CustomField>
    <fullName>CompetitionType__c</fullName>
    <label>Competition Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Club</fullName>
                <default>true</default>
                <label>Club Competition</label>
            </value>
            <value>
                <fullName>International</fullName>
                <label>International Competition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>