force-app/main/default/objects/Competition__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <label>Tournament Organizer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CompetitionType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UEFA</fullName>
            </value>
            <value>
                <fullName>FIFA</fullName>
            </value>
            <value>
                <fullName>Royal Spanish Football Federation</fullName>
            </value>
            <value>
                <fullName>German Football Association</fullName>
            </value>
            <value>
                <fullName>English Football Association</fullName>
            </value>
            <value>
                <fullName>Italian Football Federation</fullName>
            </value>
            <value>
                <fullName>French Football Federation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>