force-app/main/default/objects/Competition__c/fields/TournamentName__c.field-meta.xml
<CustomField>
    <fullName>TournamentName__c</fullName>
    <label>Tournament Name</label>
    <required>true</required>
    <type>Picklist</type>    
    <valueSet>
        <controllingField>TournamentType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champions League 19/20</fullName>
            </value>
            <value>
                <fullName>Champions League 20/21</fullName>
            </value>
            <value>
                <fullName>Europa League 19/20</fullName>
            </value>
            <value>
                <fullName>Europa League 20/21</fullName>
            </value>
            <value>
                <fullName>La Liga 19/20</fullName>
            </value>
            <value>
                <fullName>La Liga 20/21</fullName>
            </value>
            <value>
                <fullName>Copa Del Rey 19/20</fullName>
            </value>
            <value>
                <fullName>Copa Del Rey 20/21</fullName>
            </value>
            <value>
                <fullName>Bundesliga 19/20</fullName>
            </value>
            <value>
                <fullName>Bundesliga 20/21</fullName>
            </value>
            <value>
                <fullName>DFB Cup 19/20</fullName>
            </value>
            <value>
                <fullName>DFB Cup 20/21</fullName>
            </value>
            <value>
                <fullName>Premier League 19/20</fullName>
            </value>
            <value>
                <fullName>Premier League 20/21</fullName>
            </value>
            <value>
                <fullName>FA Cup 19/20</fullName>
            </value>
            <value>
                <fullName>FA Cup 20/21</fullName>
            </value>
            <value>
                <fullName>Serie A 19/20</fullName>
            </value>
            <value>
                <fullName>Serie A 20/21</fullName>
            </value>
            <value>
                <fullName>Coppa Italia 19/20</fullName>
            </value>
            <value>
                <fullName>Coppa Italia 20/21</fullName>
            </value>
            <value>
                <fullName>Ligue 1 19/20</fullName>
            </value>
            <value>
                <fullName>Ligue 1 20/21</fullName>
            </value>
            <value>
                <fullName>France Cup 19/20</fullName>
            </value>
            <value>
                <fullName>France Cup 20/21</fullName>
            </value>
            <value>
                <fullName>Euro 2020</fullName>
            </value>
            <value>
                <fullName>World Cup 2022</fullName>
            </value>
            <value>
                <fullName>Friendly Match</fullName>
            </value>
        </valueSetDefinition>             
    </valueSet>
</CustomField>