force-app/main/default/objects/Competition__c/fields/TournamentType__c.field-meta.xml
<CustomField>
    <fullName>TournamentType__c</fullName>
    <label>Tournament Type</label>
    <required>true</required>
    <type>Picklist</type>    
    <valueSet>
        <controllingField>Organizer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champions League</fullName>
            </value>
            <value>
                <fullName>Europa League</fullName>
            </value>
            <value>
                <fullName>Championship</fullName>
            </value>
            <value>
                <fullName>Cup</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Main Tournament</fullName>
            </value>
            <value>
                <fullName>Friendly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>