force-app/main/default/objects/Competition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TournamentName__c</columns>
    <columns>Organizer__c</columns>
    <columns>CompetitionType__c</columns>
    <columns>TournamentType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>